// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`idが設定できる 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -11,11 +11,11 @@
    },
    \\"developerMode\\": Object {
      \\"isActive\\": true,
    },
    \\"estimator\\": Object {
-     \\"id\\": null,
+     \\"id\\": 1234,
      \\"result\\": \\"\\",
    },
    \\"timer\\": Object {
      \\"scanSpeed\\": 500,
    },"
`;

exports[`resultを設定できる 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -12,11 +12,11 @@
    \\"developerMode\\": Object {
      \\"isActive\\": true,
    },
    \\"estimator\\": Object {
      \\"id\\": null,
-     \\"result\\": \\"\\",
+     \\"result\\": \\"あらゆる現実を全て自分の方へねじ曲げたのだ\\",
    },
    \\"timer\\": Object {
      \\"scanSpeed\\": 500,
    },
  }"
`;
